# image_processor_with_webui

./: CMakeLists.txt  README.md
include/: color_processing.hpp  compression.hpp  image_io.hpp  image_scaling.hpp  logger.hpp  web_server.hpp
src/: main.cpp
src/core/: color_processing.cpp  compression.cpp  image_io.cpp  image_scaling.cpp  logger.cpp
src/ui/: web_server.cpp
web/: index.html  style.css
web/js/: color.js  download.js  main.js  process.js  scale.js  scroll_control.js  state.js  upload_area.js
